--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,14 @@
-<h1>Pages#home</h1>
-<p>Pronađi me u app/views/pages/home.html.erb</p>
+<!DOCTYPE html>
+<html>
+  <head>
+	  <title>Ruby on Rails Tutorial Sample App | <%= @title %></title>
+  </head>
+  <body>
+    <h1>Sample App</h1>
+    <p>
+      This is the home page for the
+      <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
+      sample application.
+    </p>
+  </body>
+</html>
