--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ruby on Rails Tutorial Sample app | <%= @title %></title>
+    <title>Ruby on Rails Tutorial Sample App | <%= @title %></title>
     <%= csrf_meta_tag %>
   </head>
   <body>
