Done with sign in

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,9 +2,15 @@
   <%= link_to logo, root_path %>
   <nav class="round">
     <ul>
-      <li><%= link_to "Home", '/' %></li>
-      <li><%= link_to "Help", 'help' %></li>
-      <li><%= link_to "Sign in", '#' %></li>
+      <li><%= link_to "Home", root_path %></li>
+      <li><%= link_to "Profile", current_user %></li>
+      <li><%= link_to "Help", help_path %></li>
+      <% if signed_in? %>
+      <li><%= link_to "Sign out", signout_path, :method => :delete %></li>
+      <% else %>
+      <li><%= link_to "Sign in", signin_path %></li>
+      <% end %>
     </ul>
   </nav>
 </header>
+
