Dodane vjezbe nakon poglavlja 10

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,8 +7,9 @@
       </h1>
     </td>
     <td class = "sidebar round">
-      <strong>Name</strong> <%= @user.name %><br />
-      <strong>URL</strong> <%= link_to user_path(@user), @user %>
+      <strong>Name:</strong> <%= @user.name %><br />
+      <strong>email:</strong> <%= @user.email %><br />
+      <strong>URL:</strong> <%= link_to user_path(@user), @user %>
     </td>
   </tr>
 </table>
