--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,22 +1,5 @@
 <% if signed_in? %>
-  <table class="front" summary="For signed-in users">
-    <tr>
-      <td class="main">
-        <h1 class="micropost">What's up?</h1>
-        <%= render 'shared/micropost_form' %>
-        <%= render 'shared/feed' %>
-      </td>
-      <td class="sidebar round">
-        <%= render 'shared/user_info' %>
-      </td>
-    </tr>
-  </table>
+  <%= render :partial => 'signed_in_home' %>
 <% else %>
-<h1>Sample App</h1>
-<p>
-  This is the home page for the
-  <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-  sample application.
-</p>
-<%= link_to "Sign up now", signup_path, :class => "signup_button round" %>
+<%= render :partial => 'not_signed_in_home' %>
 <% end %>
