--- a/app/views/relationships/create.js.erb
+++ b/app/views/relationships/create.js.erb
@@ -1,3 +1,3 @@
-$("follow_form").update("<%= escape_javascript(render('users/follow')) %>")
+$("follow_form").update("<%= escape_javascript(render('users/unfollow')) %>")
 $("followers").update('<%= "#{@user.followers.count} followers" %>')
 
