Integriran jQuery, loadanje s google api, refaktoriran kod za sidebar

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,10 +14,7 @@
       <% end %>
     </td>
     <td class = "sidebar round">
-      <strong>Name:</strong> <%= @user.name %><br />
-      <strong>email:</strong> <%= @user.email %><br />
-      <strong>URL:</strong> <%= link_to user_path(@user), @user %>
-      <strong>Microposts:</strong> <%= @user.microposts.count %>
+      <%= render 'shared/sidebar_content' %>
     </td>
   </tr>
 </table>
